fix: adjust font weights and sizes for improved readability in weather section

--- a/app/Dashboard/static/css/dashboard.css
+++ b/app/Dashboard/static/css/dashboard.css
@@ -93,7 +93,7 @@
 }
 .weather-container #weather p{
   color: black;
-  font-weight: 600;
+  font-weight: 500;
 }
 .dark-mode .weather-section #weather{
   color: #ccc;
@@ -121,11 +121,11 @@
   backdrop-filter: blur(10px);
   transition: background 0.5s ease;
   font-size: 12px;
-  font-weight: 550;
+  font-weight: 500;
 }
 
 .weather-container h1{
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 600;
 }
 
@@ -308,7 +308,7 @@ p {
   gap: 10px; /* Space between text and line */
   padding: 15px;
   margin-bottom: 12px;
-  margin-top: 12px;
+  margin-top: 20px;
 }
 
 .title-with-line hr {
